# audiobook-stack

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  colab_chattts_worker.ipynb  colab_f5_worker.ipynb  colab_fish_worker.ipynb  colab_worker.ipynb  current_colab_f5_worker.ipynb  docker-compose.worker.nfs.yml  docker-compose.worker.smb.yml  docker-compose.worker.yml  docker-compose.yaml  sync_abogen.bat
.claude/: settings.local.json
abogen_src/: README.md  pyproject.toml
abogen_src/abogen/: book_parser.py  check_cuda.py  chunking.py  constants.py  debug_tts_samples.py  entity_analysis.py  gui.py  heteronym_overrides.py  hf_tracker.py  is_nvidia.py  kokoro_text_normalization.py  llm_client.py  main.py  normalization_settings.py  predownload_gui.py  pronunciation_store.py  queue_manager_gui.py  queued_item.py  spacy_contraction_resolver.py  spacy_utils.py  speaker_analysis.py  speaker_configs.py  subtitle_utils.py  text_extractor.py  tts_supertonic.py  utils.py  voice_cache.py  voice_formula_gui.py  voice_formulas.py  voice_profiles.py  word_substitution.py
abogen_src/abogen/assets/: create_shortcuts.bat
abogen_src/abogen/epub3/: __init__.py  exporter.py
abogen_src/abogen/integrations/: audiobookshelf.py  calibre_opds.py
abogen_src/abogen/pyqt/: __init__.py  book_handler.py  conversion.py  gui.py  main.py  queue_manager_gui.py  queued_item.py  voice_formula_gui.py
abogen_src/abogen/resources/: docopt-0.6.2-py2.py3-none-any.whl  progress-1.6-py3-none-any.whl
abogen_src/abogen/webui/: Dockerfile  __init__.py  app.py  conversion_runner.py  debug_tts_runner.py  entrypoint.sh  service.py  test_chunk_api.py  test_extraction.py  test_jobs_api.py
abogen_src/abogen/webui/routes/: __init__.py  api.py  books.py  entities.py  jobs.py  main.py  settings.py  voices.py
abogen_src/abogen/webui/routes/utils/: common.py  entity.py  epub.py  form.py  preview.py  service.py  settings.py  voice.py
abogen_src/abogen/webui/static/: dashboard.js  entities.js  find_books.js  prepare.js  queue.js  reader.js  settings.js  speaker-configs.js  speakers.js  styles.css  voices.js  wizard.js
abogen_src/abogen/webui/templates/: base.html  debug_wavs.html  entities.html  find_books.html  index.html  job_detail.html  job_logs_missing.html  job_logs_static.html  job_not_found.html  prepare_chapters.html  prepare_job.html  prepare_speakers.html  queue.html  reader_embed.html  settings.html  speakers.html  voices.html
abogen_src/abogen/webui/templates/partials/: jobs.html  logs.html  logs_section.html  logs_section_missing.html  new_job_step_book.html  new_job_step_chapters.html  new_job_step_entities.html  reader_modal.html  upload_modal.html
abogen_src/tests/: test_book_pipeline.py  test_text_extractor.py
chattts-worker/: Dockerfile  requirements.txt  speak.py  worker.py
config/: prometheus.yml
config/grafana/dashboards/: dashboard.yaml  pipeline.json
f5-worker/: Dockerfile  requirements.txt  worker.py
f5-worker/ref/: README.md
merger/: Dockerfile  merger.py  requirements.txt
orchestrator/: Dockerfile  invalidate_chunks.py  orchestrator.py  requirements.txt  test_pipeline_integration.py  test_ssml_voiceblend.py  test_voice_blend.py
watcher/: Dockerfile  watcher.py
worker/: Dockerfile  worker.py
